--- a/punto-1-3/styles/section-1-styles.css
+++ b/punto-1-3/styles/section-1-styles.css
@@ -26,6 +26,9 @@
     border-radius: 48px;
     box-shadow: 0px 10px 5px #45586833;  
 }
+.section-1_card-down {
+    margin-top: 50px;
+}
 
 .section-1_card h3 {
     font-family: "Jost";
