--- a/punto-4/styles/fuente-styles.css
+++ b/punto-4/styles/fuente-styles.css
@@ -1,12 +1,12 @@
 h1{
-    font-family: cursive;
+    font-family: 'Times New Roman', Times, serif;
     text-align: center;
     font-size: 100px;
-    color: blue; 
+    color: #0000ff; 
 }
 
 h2{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Times New Roman', Times, serif;
     text-align: center;
     font-size: 100px;
     color: #ff0000; 
