--- a/punto-6/styles/enlaces-styles.css
+++ b/punto-6/styles/enlaces-styles.css
@@ -6,8 +6,8 @@ h3 {
 }
 
 .link_yellow {
-    color: #f1e252;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #ffff00;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     display: flex;
     flex-direction: column;
@@ -16,8 +16,8 @@ h3 {
  }
 
  .link_purple {
-    color: #b844e6;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #800080;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     display: flex;
     flex-direction: column;
